retrieveUnpackaged/objects/Fiscal_Year__c.object
<CustomObject>
    <fields>
        <fullName>Achieved_Revenue__c</fullName>
        <label>Achieved Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Revenue__c</fullName>
        <label>Expected Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Fiscal Years</relationshipLabel>
        <relationshipName>Fiscal_Years</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Fiscal Year</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>Sl No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fiscal Years</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>